# 9-practica-pollimorfismosalario-nickgom03

./: CMakeLists.txt  DesarrolladorJunior.cpp  DesarrolladorJunior.h  DesarrolladorSenior.cpp  DesarrolladorSenior.h  Empleado.cpp  Empleado.h  LiderTecnico.cpp  LiderTecnico.h  Nomina.cpp  Nomina.h  Tester.cpp  Tester.h  UML  main.cpp
