cmake_minimum_required(VERSION 3.16)
project(9_practica_pollimorfismosalario_nickgom03)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(9_practica_pollimorfismosalario_nickgom03
    DesarrolladorJunior.cpp
    DesarrolladorSenior.cpp
    Empleado.cpp
    LiderTecnico.cpp
    Nomina.cpp
    main.cpp
    Tester.cpp
)
